--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ tokio = { version = "1.22.0", features = ["macros"] }
 tokio-stream = "0.1.11"
 tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
+ipnetwork = { version = "0.19.0", default-features = false, features = ["serde"] }
