--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,4 @@ tokio-stream = "0.1.11"
 tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
 ipnetwork = { version = "0.19.0", default-features = false, features = ["serde"] }
+surge-ping = "0.7.3"
