--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,8 @@ path = "src/main.rs"
 chrono = "0.4.23"
 # TODO: update discv5 once the next version (beta.14) has been released: https://github.com/sigp/discv5/pull/118
 # Specifying the patched revision for now:  https://github.com/sigp/discv5/pull/122
-discv5 = { git = "https://github.com/sigp/discv5.git", rev = "e02821e75ad2babee934698d9073ee9813bc01ae" }
+# discv5 = { git = "https://github.com/sigp/discv5.git", rev = "e02821e75ad2babee934698d9073ee9813bc01ae" }
+discv5 = "0.1.0"
 rand_xorshift = "0.3.0"
 serde = "1.0.148"
 serde_json = "1.0.89"
